<resources>
    <string name="app_name">EREHS</string>
    <string name="eozin_vosp_title">1. Эозинофильное воспаление</string>
    <string name="stepen_poraz">Степень поражения</string>
    <string name="intraepit_eozin_otsut">Интраэпителиальные эозинофилы отсутствуют</string>
    <string name="pech_15_x400"><![CDATA[ПЭЧ < 15/ПЗР, х400]]></string>
    <string name="pech_1549_x400">ПЭЧ 15-59/ПЗР, х400</string>
    <string name="pech_60_x400"><![CDATA[ПЭЧ > 60/ПЗР, х400]]></string>
    <string name="raspr_stadia">Распространенность (стадия)</string>
    <string name="giper_baz_otsut">Гиперплазия базального слоя отсутствует</string>
    <string name="baz_15_30"><![CDATA[Базальная зона занимает >15%, но <30% общей толщины эпителия]]></string>
    <string name="baz_33_66">Базальная зона занимает 33-66% общей толщины эпителия</string>
    <string name="baz_66"><![CDATA[Базальная зона занимает >66% общей толщины эпителия]]></string>
    <string name="intra_14_x400">Интраэпитэлиальные эозинофилы 0-14/ПЗР, х400.</string>
    <string name="intra_15_33_x400"><![CDATA[ПЭЧ ≥ 15/ПЗР, х400 в <33% ПЗР, х400]]></string>
    <string name="pech_15_pzr_33_66_x400">ПЭЧ ≥ 15/ПЗР, х400 в 33-66% ПЗР, х400</string>
    <string name="pech_15_66_x400"><![CDATA[ПЭЧ ≥ 15/ПЗР, х400 >66% ПЗР, х400]]></string>
    <string name="baz_giper_33"><![CDATA[Базальная гиперплазия (любой степени>0) в <33% эпителия]]></string>
    <string name="giper_baz_33_66"><![CDATA[Базальная гиперплазия (любой степени>0) в 33-66% эпителия]]></string>
    <string name="baz_giper_66"><![CDATA[Базальная гиперплазия (любой степени>0) в >66% эпителия]]></string>
    <string name="baz_sloi_title_2">2. Базальный слой плоского эпителия пищевода</string>
    <string name="eozin_absc_title_3">3. Эозинофильные абсцессы ЭА</string>
    <string name="scop_eozin_neopr">Скопления эозинофилов не определяются</string>
    <string name="scop_4_5_eozin">Скопления 4-9 эозинофилов</string>
    <string name="scop_10_20_eozin">Скопления 10-20 эозинофилов</string>
    <string name="scop_20_eozin"><![CDATA[Скопления >20 эозинофилов]]></string>
    <string name="ea_33"><![CDATA[ЭА (любая степень>0) в <33% эпителия]]></string>
    <string name="ea_33_66"><![CDATA[ЭА (любая степень>0) в 33-66% эпителия]]></string>
    <string name="ea_66"><![CDATA[ЭА (любая степень>0) в >66% эпителия]]></string>
    <string name="eozin_poverh_title_4">4. Эозинофильное поверхностное наслоение «пластообразование»</string>
    <string name="pn_otsut">ПН отсутствует (менее 3 линейно расположенных эозинофилов)</string>
    <string name="pn_3_4">ПН 3-4 эозинофилов</string>
    <string name="pn_5_10">ПН 5-10 эозинофилов</string>
    <string name="pn_10"><![CDATA[ПН >10 эозинофилов]]></string>
    <string name="pn_33"><![CDATA[ПН (любая степень>0) в <33% эпителия]]></string>
    <string name="pn_33_66"><![CDATA[ПН (любая степень>0) в 33-66% эпителия]]></string>
    <string name="pn_66"><![CDATA[ПН (любая степень>0) в >66% эпителия]]></string>
    <string name="rashir_mezhklet_title_5">5. Расширенные межклеточные пространства (РМП)</string>
    <string name="rmp_neopr">РМП не определяется при любом увеличении</string>
    <string name="rmp_400">Межклеточные мостики в РМП различимы только при увеличении х400</string>
    <string name="rmp_200">Межклеточные мостики в РМП различимы при увеличении х200</string>
    <string name="rmp_100">Межклеточные мостики в РМП различимы при увеличении х100 и менее</string>
    <string name="rmp_33"><![CDATA[РМП (любая степень>0) в <33% эпителия]]></string>
    <string name="rmp_33_66"><![CDATA[РМП (любая степень>0) в 33-66% эпителия]]></string>
    <string name="rmp_66"><![CDATA[РМП (любая степень>0) в >66% эпителия]]></string>
    <string name="povr_poverhn_epit_title_6">6. Повреждение поверхностного эпителия (ППЭ)</string>
    <string name="ppe_neopr">ППЭ не определяется</string>
    <string name="ppe_bez_eozon">ППЭ без эозинофильного компонента</string>
    <string name="ppe_s_lybum_kolich_epit">ППЭ с любым количеством эозинофилов</string>
    <string name="slyschivan_povr_poverhn_epit">Слущивание поврежденного поверхностного эпителия в сочетании с большим количеством эозинофилов</string>
    <string name="ppe_33"><![CDATA[ППЭ (любая степень>0) в <33% эпителия]]></string>
    <string name="ppe_33_66"><![CDATA[ППЭ (любая степень>0) в 33-66% эпителия]]></string>
    <string name="ppe_66"><![CDATA[ППЭ (любая степень>0) в >66% эпителия]]></string>
    <string name="diskeratoz_title_7">7. Дискератоз</string>
    <string name="disker_ne_opr">Дискератоз не определяется</string>
    <string name="kletk_disker_x400">1 клетка с дискератозом/ПЗР, х400</string>
    <string name="kletk_disker_2_5_x400">2-5 клеток с дискератозом/ПЗР, х400</string>
    <string name="kletk_disker_5_400"><![CDATA[>5 клеток с дискератозом/ПЗР, х400]]></string>
    <string name="disker_33"><![CDATA[Дискератоз (любой степени>0) в <33% эпителия]]></string>
    <string name="disker_33_66"><![CDATA[Дискератоз (любой степени>0) в 33-66% эпителия]]></string>
    <string name="disker_66"><![CDATA[Дискератоз (любой степени>0) в 66% эпителия эпителия]]></string>
    <string name="fibroz_sobstv_plastink_title_8">8. Фиброз собственной пластинки слизистой оболочки (ФСП)</string>
    <string name="fsp_neopr">ФСП не определяется</string>
    <string name="volokna_sceplen_drug_s_drug">Волокна сцеплены друг с другом, пространство между ними не определяется</string>
    <string name="diametr_volokn_raven_diametr_baz_sloy">Диаметр волокон равен диаметру ядер клеток базального слоя</string>
    <string name="diametr_volokn_bolshe_baz_sloy">Диаметр волокон превышает диаметр ядер клеток базального слоя</string>
    <string name="fsp_33"><![CDATA[ФСП (любой степени>0) в <33% собственной пластинке слизистой]]></string>
    <string name="fsp_33_66"><![CDATA[ФСП (любой степени>0) в 33-66% собственной пластинке слизистой]]></string>
    <string name="fsp_66"><![CDATA[ФСП (любой степени>0) в 66% собственной пластинке слизистой]]></string>
    <string name="exudates_title_1">1. Exudates / Экссудаты</string>
    <string name="stepen0_no_priznak">Степень 0. Признак отсутствует</string>
    <string name="stepen1_legkaya_bel_nal_menshe_10">Степень 1. Легкая - Белесоватый налет, покрывающий меньше 10% площади поверхности пищевода</string>
    <string name="stepen2_tyazhelaya_bel_nal_bolshe_10">Степень 2. Тяжелая - Белесоватый налет, покрывающий больше 10% площади поверхности пищевода</string>
    <string name="rings_title_2">2. Rings. Концентрические сужения (кольца)</string>
    <string name="stepen0_priznak_otsut_vaskulyar">Степень 0. Признак отсутствует. Присутствует отчетливая васкуляризация</string>
    <string name="stepen1_otek_otsut_vizual">Степень 1. Отёк - Отсутствие визуализации сосудов слизистой</string>
    <string name="edema_title_3">3. Edema / Отёк</string>
    <string name="stepen1_light_tonkie_grebni">Степень 1. Легкая - Тонкие циркулярные гребни</string>
    <string name="stepen2_umeren_kolca">Степень 2. Умеренная - Четкие кольца, которые не препятствуют прохождению стандартного взрослого эндоскопа [внешний диаметр 8–9.5 мм]</string>
    <string name="stepen3_tyazhel_kolca">Степень 3. Тяжелая - Четкие кольца, препятствующие проведению эндоскопа</string>
    <string name="furrows_title_4">4. Furrows / Борозды</string>
    <string name="stepen1_priznak_prisut">Степень 1. Признак присутствует</string>
    <string name="strictures_title_5">5. Strictures / Стриктуры</string>
    <string name="to_eoehss">Перейти к тесту EoEHSS</string>
    <string name="get_res_rus">Получить результат</string>
    <string name="osl_2"><![CDATA[*Вклинение пищи, потребовавшее обращения за неотложной помощью или эндоскопии (для пациентов <18 лет) *Госпитализация по причине ЭоЭ]]></string>
    <string name="perf_pish"><![CDATA[*Перфорация пищевода *Мальнутриция с массой тела <5-го процентиля или снижением траектории роста]]></string>
</resources>