<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/erefs_scroll"
    tools:context=".EREHS_test">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="@string/exudates_title_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView0">


            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen0_no_priznak"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen1_legkaya_bel_nal_menshe_10"
                android:textAlignment="textStart"

                app:layout_constraintVertical_bias="0.0" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen2_tyazhelaya_bel_nal_bolshe_10"
                android:textAlignment="textStart"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/rings_title_2"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30">

            <RadioButton
                android:id="@+id/radioButton31"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen0_priznak_otsut_vaskulyar"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/radioButton32"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen1_otek_otsut_vizual"
                android:textAlignment="textStart" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/edema_title_3"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20">

            <RadioButton
                android:id="@+id/radioButton21"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen0_no_priznak"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/radioButton22"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen1_light_tonkie_grebni"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/radioButton23"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen2_umeren_kolca"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/radioButton24"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen3_tyazhel_kolca"
                android:textAlignment="textStart" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/furrows_title_4"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView40">

            <RadioButton
                android:id="@+id/radioButton41"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen0_no_priznak"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/radioButton42"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen1_priznak_prisut"
                android:textAlignment="textStart" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/strictures_title_5"
            android:textSize="19sp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView50">

            <RadioButton
                android:id="@+id/radioButton51"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen0_no_priznak"
                android:textAlignment="textStart" />

            <RadioButton
                android:id="@+id/radioButton52"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:text="@string/stepen1_priznak_prisut"
                android:textAlignment="textStart" />


        </RadioGroup>

        <Button
            android:id="@+id/resbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:text="@string/to_eoehss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup5"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewtest"
            android:layout_width="59dp"
            android:layout_height="31dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/erefBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="eref_back"
            android:text="Назад"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/resbutton"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>